--- a/src/components/card.css
+++ b/src/components/card.css
@@ -52,14 +52,15 @@
   left: 45%;
   top: 85%;
   background-color: #ffeedf;
-  color: #145434;
+  color: var(--secondary);
   font-size: 14px;
   height: 50px;
   width: 200px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  padding: 0 2rem;
 }
 
 .arrow-icon {
